--- a/book/pom.xml
+++ b/book/pom.xml
@@ -34,33 +34,29 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 
 	<properties>
 		<!-- These values are copied from the project being documented -->
-		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
+		<documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
 		<documented.javaVersion>1.8</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk8}</documented.javac.link.javaApi>
 		<documented.name>SemanticCMS AutoGit Taglib²</documented.name>
 		<documented.shortTitle>Taglib</documented.shortTitle>
-		<documented.url>https://semanticcms.com/autogit/taglib/</documented.url>
 		<documented.description>SemanticCMS automatic Git in a JSP environment.</documented.description>
-		<documented.inceptionYear>2016</documented.inceptionYear>
-		<documented.scm.url>https://github.com/aoindustries/${documented.artifactId}</documented.scm.url>
 
 		<javadoc.breadcrumbs><![CDATA[<a target="_top" href="https://semanticcms.com/">SemanticCMS</a>
 / <a target="_top" href="https://semanticcms.com/autogit/">AutoGit</a>
 / <a target="_top" href="${project.url}">${shortTitle}</a>]]></javadoc.breadcrumbs>
 		<shortTitle>Taglib Book</shortTitle>
-		<description.html><![CDATA[Documentation for <a target="_top" href="${documented.url}">${documented.name}</a> in <a target="_top" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
+		<description.html><![CDATA[Documentation for <a target="_top" href="${project.url}">${documented.name}</a> in <a target="_top" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
 	</properties>
 
-	<name>${documented.name} Book</name>
-	<url>${documented.url}</url>
-	<description>Documentation for ${documented.name} in SemanticCMS format.</description>
-	<inceptionYear>${documented.inceptionYear}</inceptionYear>
+	<name>SemanticCMS AutoGit Taglib² Book</name>
+	<url>https://semanticcms.com/autogit/taglib/</url>
+	<description>Documentation for SemanticCMS AutoGit Taglib² in SemanticCMS format.</description>
+	<inceptionYear>2016</inceptionYear>
 
 	<scm>
-		<!-- Can't inherit due to multi-module -->
-		<connection>scm:git:git://github.com/aoindustries/${documented.artifactId}.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/${documented.artifactId}.git</developerConnection>
-		<url>${documented.scm.url}</url>
+		<connection>scm:git:git://github.com/aoindustries/semanticcms-autogit-taglib.git</connection>
+		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-autogit-taglib.git</developerConnection>
+		<url>https://github.com/aoindustries/semanticcms-autogit-taglib</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -139,7 +135,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<dependencies>
 			<!-- Java EE -->
 			<dependency>
-				<groupId>com.aoindustries</groupId><artifactId>javaee-web-api-bom</artifactId><version>6.0.0${POST-SNAPSHOT}</version>
+				<groupId>com.aoindustries</groupId><artifactId>javaee-web-api-bom</artifactId><version>6.0.1-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
