--- a/book/pom.xml
+++ b/book/pom.xml
@@ -58,6 +58,11 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<tag>HEAD</tag>
 	</scm>
 
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/aoindustries/semanticcms-autogit-taglib/issues</url>
+	</issueManagement>
+
 	<build>
 		<plugins>
 			<!-- Add a copy of the taglib files from dependencies -->
