--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.4.0-SNAPSHOT</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.4.0</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -55,7 +55,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-autogit-taglib.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-autogit-taglib.git</developerConnection>
 		<url>https://github.com/aoindustries/semanticcms-autogit-taglib</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-autogit-taglib-book-1.4.0</tag>
 	</scm>
 
 	<issueManagement>
