--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.4.0-POST-SNAPSHOT</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.5.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -78,7 +78,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.4.0${POST-SNAPSHOT}</version>
+									<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.5.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 									<type>jar</type>
 									<includes>META-INF/semanticcms-autogit.tld</includes>
 								</artifactItem>
@@ -157,7 +157,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		</dependency>
 		<!-- Direct -->
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>4.2.0${POST-SNAPSHOT}</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>4.3.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId><artifactId>semanticcms-tag-reference</artifactId><version>1.4.0${POST-SNAPSHOT}</version>
@@ -198,7 +198,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		</dependency>
 		<!-- Dependency for dependencyversion-maven-plugin only -->
 		<dependency>
-			<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.4.0-POST-SNAPSHOT</version>
+			<groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.5.0-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
