--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 								<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
 								<link>https://semanticcms.com/autogit/model/apidocs/</link>
 								<link>https://semanticcms.com/autogit/servlet/apidocs/</link>
-								<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
+								<!-- TODO: Once published: <link>https://semanticcms.com/core/renderer/html/apidocs/</link> -->
 							</links>
 						</configuration>
 					</plugin>
