--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 						<dependency>javax.servlet:jstl</dependency>
 						<dependency>com.semanticcms:semanticcms-core-taglib</dependency>
 						<!-- Runtime Direct -->
-						<dependency>org.webjars:jquery</dependency>
+						<dependency>org.webjars.npm:jquery</dependency>
 						<dependency>org.glassfish.web:jstl-impl</dependency>
 					</usedDependencies>
 				</configuration>
@@ -269,7 +269,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			</dependency>
 			<!-- Runtime Direct -->
 			<dependency>
-				<groupId>org.webjars</groupId><artifactId>jquery</artifactId><version>3.5.1</version>
+				<groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId><version>3.5.1</version>
 			</dependency>
 			<!-- javaee-web-api-bom: <groupId>org.glassfish.web</groupId><artifactId>jstl-impl</artifactId> -->
 			<!-- BOM -->
@@ -315,7 +315,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		</dependency>
 		<!-- Runtime Direct -->
 		<dependency>
-			<groupId>org.webjars</groupId><artifactId>jquery</artifactId>
+			<groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
