--- a/src/main/resources-filtered/com/semanticcms/autogit/taglib/ajax/Maven.properties
+++ b/src/main/resources-filtered/com/semanticcms/autogit/taglib/ajax/Maven.properties
@@ -23,4 +23,4 @@
 
 # Properties exposed to Java code through Maven build
 
-jqueryVersion=@{org.webjars:jquery:jar.version}
+jqueryVersion=@{org.webjars.npm:jquery:jar.version}
